# genetictsp

./: .gitignore  Cargo.toml
src/: ga.rs  main.rs  tsp.rs  tsp_data.rs
vis/: param.py  plot2d.py  plot3d.py  route.py  stats.py
