[package]
name = "genetictsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
anyhow = "1.0.45"
itertools = "0.10.1"
ringbuffer = "0.8.2"
tspf = "0.3.1"
rayon = "1.5.1"
structopt = "0.3.25"
indicatif = "0.16.2"
serde_json = "1.0.72"
serde = { version = "1.0.131", features = ["derive"] }
csv = "1.1.6"
